apps/staging/keycloak/httpRedirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-http-redirect
  namespace: default
spec:
  parentRefs:
    - name: myrobertson-com-gateway
      namespace: default
      sectionName: keycloak-http
  hostnames: ["keycloak.staging.myrobertson.net"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
