apps/staging/keycloak/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak
  namespace: default
spec:
  parentRefs:
    - name: myrobertson-com-gateway
      namespace: default
      sectionName: keycloak
  hostnames: ["sso.staging.myrobertson.net"]
  rules:
    - matches:
        - path:
            type: Exact
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            path:
              type: ReplaceFullPath
              replaceFullPath: /realms/homelab/account/
            statusCode: 302
    - matches:
        - path:
            type: Exact
            value: /admin
        - path:
            type: Exact
            value: /admin/
      filters:
        - type: RequestRedirect
          requestRedirect:
            path:
              type: ReplaceFullPath
              replaceFullPath: /admin/homelab/console/
            statusCode: 302
    - backendRefs:
        - name: keycloak
          port: 80
